<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#171f21"
    android:orientation="horizontal"
    android:paddingTop="15dp"
    tools:ignore="DisableBaselineAlignment" >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    >
    
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" 
		    android:layout_weight="64"
		    android:layout_marginBottom="10dip">
		    
		      <TextView  
			       android:id="@+id/secteur"
			       android:layout_width="fill_parent" 
			       android:layout_height="wrap_content" 
			       android:textColor="#efefef"
			       android:textSize="20dip"
			       android:paddingLeft="7dp"
			       android:paddingRight="20dp"
			       android:text="@string/label_liste_deroulante_secteur"
			       android:layout_weight="1" />
		      
			   <Spinner
			       android:id="@+id/choix"
			       android:layout_width="fill_parent"
			       android:layout_height="40dp"
			       android:gravity="center_vertical|left"
			       android:background="#efefef" 
			       android:layout_weight="1"/>
		    
	    </LinearLayout>
	    
        <TextView
            android:id="@+id/moyens"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="7dp"
            android:paddingTop="15dp"
            android:text="@string/label_grille_moyens"
            android:textColor="#efefef"
            android:textSize="20dip" 
            android:layout_weight="65"/>
	   
		<GridView
		    android:id="@+id/choixMoyens"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:clickable="true"
		    android:columnWidth="100dp"
		    android:gravity="center"
		    android:horizontalSpacing="10dp"
		    android:longClickable="false"
		    android:numColumns="auto_fit"
		    android:paddingTop="10dip"
		    android:stretchMode="columnWidth"
		    android:textSize="10pt"
		    android:textStyle="bold"
		    android:verticalSpacing="10dp" 
		    android:layout_weight="42"/>
		
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" 
		    android:paddingTop="10dp"
		    android:layout_weight="1">
		    
		      <TextView  
			       android:id="@+id/labelAutreMoyens"
			       android:layout_width="wrap_content" 
			       android:layout_height="wrap_content" 
			       android:textColor="#efefef"
			       android:textSize="20dip"
			       android:paddingLeft="7dp"
			       android:paddingRight="20dp"
			       android:text="@string/label_liste_deroulante_autre_moyens" 
			       android:layout_weight="1"
			       />
		      
			   <AutoCompleteTextView 
			       android:id="@+id/AutreMoyens"
			       android:background="#efefef"
			       android:layout_width="195dp"
			       android:layout_height="50dp" 
			       android:completionThreshold="1"
			       android:layout_weight="1"
			       />
		    
	    </LinearLayout>
	    
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:orientation="horizontal"
		    android:layout_width="fill_parent"
		    android:paddingTop="40dp"
		    android:paddingLeft="7dp"
		    android:layout_height="150dp" 
		    android:layout_weight="1"
		    >
			   
		    <TextView  
			       android:id="@+id/labelQuantite"
			       android:layout_width="fill_parent" 
			       android:layout_height="fill_parent" 
			       android:textColor="#efefef"
			       android:gravity="center_vertical|right"
			       android:textSize="20dip"
			       android:paddingLeft="7dp"
			       android:paddingRight="20dp"
			       android:text="@string/change_quantite"
			       android:layout_weight="1" 
			       />
		    
		    <EditText
		            android:id="@+id/quantiteeMoyens"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:inputType="number" 
		            android:gravity="center"
		            android:text="@string/un"
		            android:textSize="40dp"
		            android:background="#efefef"
		            android:textIsSelectable="false"
		            android:color="#000000"
		            android:layout_weight="1"
		            android:layout_marginLeft="20dp"
		            >
		    </EditText>
		    
		    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent" 
			    android:layout_weight="1" 
			    android:layout_marginLeft="30dp">

		        <Button
		            android:id="@+id/bouttonAjoutQuantite"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:background="@drawable/red_button"
		            android:layout_marginBottom="4dp"
		            android:layout_weight="1"
		            android:text="@string/plus" />
		        
		        <Button
		            android:id="@+id/bouttonEnleveQuantite"
		            android:layout_width="fill_parent"
		            android:layout_height="fill_parent"
		            android:background="@drawable/red_button"
		            android:layout_marginTop="4dp"
		            android:layout_weight="1"
		            android:text="@string/moins" />
			 
			</LinearLayout>
		    
	    </LinearLayout>
	    
		<Button
            android:id="@+id/bouttonAjoutToList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/red_button"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="7dp"
            android:text="@string/ajouterALaListe" 
            android:layout_weight="59"/>
       
	</LinearLayout>
		
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="1"
	    android:paddingLeft="20dp"
	    >
		
		<TextView
		    android:id="@+id/labelListeMoyensDemandes"
		    android:layout_width="wrap_content"
		    android:layout_height="59dp"
		    android:gravity="top"
		    android:text="@string/label_liste_moyens_demandes"
		    android:textColor="#efefef"
		    android:textSize="20dip" />

        <ListView
            android:id="@+id/listMoyensToSend"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" 
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:layout_weight="1">
        </ListView>
        
        <Button
            android:id="@+id/bouttonSendList"
            android:background="@drawable/grey_button"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="7dp"
            android:textColor="#efefef"
            android:text="@string/sendListe" 
            android:layout_weight="3.4"
       		/>
	
    </LinearLayout>
    
</LinearLayout>
