<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171f21"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="10dip"
        >

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#efefef"
	        android:textSize="20sp"
	        android:layout_marginLeft="10dip"
	        android:layout_marginRight="40dip"
	        android:text="@string/DestinataireLabel" 
	        />
	    
	    <Button
            android:id="@+id/BouttonDestinataire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" 
            android:minWidth="250dip"
            android:background="@drawable/red_button"
            />
    
    </LinearLayout>
    <EditText
         android:id="@+id/texteMessageToSend"
   		 android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="top"
         android:padding="20dip"
         android:textColor="#efefef"
         android:lineSpacingExtra="10dip"
         android:textSize="20dip"
         android:layout_weight="1"
         android:layout_margin="7dip"
         android:hint="@string/hint_textMsgQQue"
         android:background="@drawable/edittext_edition_soiec_bg"
         android:inputType="text|textMultiLine"
         >

     </EditText>   

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        >

        <Button
            android:id="@+id/bouttonEnvoyer"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:minHeight="67dip"
            android:layout_margin="5dp"
            android:background="@drawable/red_button"
            android:text="@string/msg_qqe_envoyer"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/bouttonJoindre"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:minHeight="67dip"
            android:layout_margin="5dp"
            android:background="@drawable/grey_button"
            android:text="@string/msg_qqe_joindre"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>