<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#363736"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/sitac"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="@string/sitac"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25dip" 
		android:clickable="true"
		android:textColor="#efefef"
		android:layout_marginLeft="50dp"
		android:gravity="center_vertical|center_horizontal"
		android:layout_weight="1.2"/>
   
	<TextView
        android:id="@+id/moyens"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="@string/moyens"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25dip"
		android:clickable="true"
		android:textColor="#efefef"
		android:gravity="center_vertical|center_horizontal" 
		android:layout_weight="1.2"/>
      
	<TextView
        android:id="@+id/messages"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="@string/messages"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25dip"
		android:clickable="true"
		android:textColor="#efefef"
		android:gravity="center_vertical|center_horizontal" 
		android:layout_weight="1.2"/>
	
	<TextView
        android:id="@+id/demandeMoyen"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="Demande de Moyens"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25dip"
		android:clickable="true"
		android:textColor="#efefef"
		android:gravity="center_vertical|center_horizontal" 
		android:layout_weight="1"/>

</LinearLayout>