<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#161e21" 
    android:orientation="vertical" >  
	 <LinearLayout
	     android:layout_width="match_parent"
	     android:layout_height="264dp"
	     android:layout_gravity="bottom|center_horizontal"
	     android:gravity="center"
	     android:orientation="vertical"
	     android:padding="10dp" >
        
	     <TextView
	         android:id="@+id/lab_welcome"
	         android:layout_width="fill_parent"
	         android:layout_height="235dp"
	         android:layout_gravity="center_horizontal"
	         android:gravity="center_horizontal|bottom"
	         android:text="@string/welcome"
	         android:textColor="#efefef"
	         android:textSize="60dp" />
	     
	</LinearLayout>
	<LinearLayout
        android:layout_width="482dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >
    

        <TextView
            android:id="@+id/lab_ident"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ident_connexion"
            android:textColor="#efefef"
            android:textSize="20dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/label_ident"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="5dip"
            android:background="#efefef"
            android:singleLine="true"
            android:textSize="30dp"
            android:layout_weight="1" 
            android:text="1"
           	android:inputType="text"/>
        
        <!-- Password Label -->

        <TextView
            android:id="@+id/lab_mdp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mdp_connexion"
            android:textColor="#efefef"
            android:textSize="20dp" 
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/label_mdp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:background="#efefef"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="30dp" 
            android:layout_weight="1"
            android:text="coucou"/>
        
        <!-- Login button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
           	android:background="@drawable/red_button"
            android:text="@string/btn_connexion"
            android:textSize="23dp"
            android:layout_weight="1" />
       
    </LinearLayout>
    <!-- Login Form Ends -->
        
</LinearLayout>