<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleAlertDialog"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:textSize="25dip"
        android:textColor="#efefef"
        android:textStyle="normal"
        android:background="@drawable/grey_button"
        android:gravity="center"
        android:text="" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        
        <Button 
            android:id="@+id/btnLessItem"
            android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:textSize="25dip"
	        android:textColor="#efefef"
	        android:textStyle="bold"
	        android:background="@drawable/red_button"
	        android:gravity="center"
	        android:text="@string/moins"
        	>
        </Button>
        
        <TextView 
            android:id="@+id/viewNbrToDelete"
            android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:textSize="25dip"
	        android:textColor="#efefef"
	        android:textStyle="bold"
	        android:background="@drawable/button_noir"
	        android:gravity="center"
            >           
        </TextView>
        
        <Button 
            android:id="@+id/btnMoreItem"
            android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:textSize="25dip"
	        android:textColor="#efefef"
	        android:textStyle="bold"
	        android:background="@drawable/red_button"
	        android:gravity="center"
	        android:text="@string/plus"
            >
        </Button>
        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        
        <Button 
            android:id="@+id/btnAnnulerDialogAlert"
            android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:textSize="20dip"
	        android:textColor="#efefef"
	        android:textStyle="bold"
	        android:background="@drawable/grey_button"
	        android:gravity="center"
	        android:text="@string/annuler"
            />
        
        <Button 
            android:id="@+id/btnSupprimerDialogAlert"
            android:layout_width="fill_parent"
        	android:layout_height="fill_parent"
        	android:layout_weight="1"
        	android:textSize="20dip"
	        android:textColor="#efefef"
	        android:textStyle="bold"
	        android:background="@drawable/grey_button"
	        android:gravity="center"
	        android:text="@string/supprimer"
            />
        
    </LinearLayout>
    

</LinearLayout>